--- a/types-and-typeclasses.html
+++ b/types-and-typeclasses.html
@@ -33,40 +33,29 @@
 <img src="http://s3.amazonaws.com/lyah/cow.png" alt="moo" class="left"
  height="127" width="180">
 <p>전에 하스켈은 정적 타입 시스템을 지녔다고 언급하였습니다. 모든 표현식의 타입은 컴파일 타임에 판명나며, 이는 보다 안전한
-코드로 이끌어 줍니다. If you write a program where you try to divide a boolean
-type with some number, it won't even compile. That's good because it's
-better to catch such errors at compile time instead of having your
-program crash. Everything in Haskell has a type, so the compiler can
-reason quite a lot about your program before compiling it.</p>
-<p>Unlike Java or Pascal, Haskell has type inference. If we write a
-number, we don't have to tell Haskell it's a number. It can <i>infer</i>
-that on its own, so we don't have to explicitly write out the types of
-our functions and expressions to get things done. We covered some of
-the basics of Haskell with only a very superficial glance at types.
-However, understanding the type system is a very important part of
-learning Haskell.</p>
-<p>A type is a kind of label that every expression has. It tells us in
-which category of things that expression fits. The expression <span
- class="fixed">True</span> is a boolean, <span class="fixed">"hello"</span>
-is a string, etc.</p>
-<p>Now we'll use GHCI to examine the types of some expressions. We'll
-do that by using the <span class="fixed">:t</span> command which,
-followed by any valid expression, tells us its type. Let's give it a
-whirl.</p>
+코드로 이끌어 줍니다.&nbsp;부울대수를 숫자로 나누려는 프로그램을 작성한다면, 컴파일이 되지 않을 것입니다. 이는 좋은
+방법인데, 나중에 프로그램이 망처지는 것보다 컴파일 타임에 이러한 종류의 에러를 잡는 것이 낫기때문입니다. 하스켈에서 모든것은
+타입을 지녔으므로, 컴파일 하기전에 컴파일러는 프로그램에 대해 상당수를 판단할 수 있습니다.</p>
+<p>Java와 Pascal과는 달리, 하스켈은 타입추론(type inference)을 지녔습니다. 예를들어, 숫자를
+작성하였다면 하스켈에게 숫자라고 말해줄 필요가 없습니다. 이는 스스로 추론이 가능하므로, 명시적으로 함수와 표현식의 타입을
+명시적으로 작성할 필요는 없습니다. 저희는 지금까지 하스켈의 타입에 관해 몇몇 기본적이며 매우 피상적인것을
+다루었습니다.&nbsp; 하지만, 타입 시스템의 이해는 하스켈을 배우는 단계에서 가장 중요합니다.</p>
+<p>타입은 모든 표현식이 갖고있는 이름표입니다. 이는 표현식에 맞는 범주가 어느것인지 알려줍니다. 표현식 <span
+ class="fixed">True</span> 는 부울대수이며, <span class="fixed">"hello"</span>는
+문자열, 등등이 있습니다.</p>
+<p>이제 저희는 GHCI를 이용하여 표현식의 타입을 밝혀낼 것입니다. 이를 :t 명령어와 타입을 알려주는 유효한 표현식을
+이용하여 할 수 있습니다. 한번 돌려 봅시다.</p>
 <pre name="code" class="haskell: ghci">ghci&gt; :t 'a'<br>'a' :: Char<br>ghci&gt; :t True<br>True :: Bool<br>ghci&gt; :t "HELLO!"<br>"HELLO!" :: [Char]<br>ghci&gt; :t (True, 'a')<br>(True, 'a') :: (Bool, Char)<br>ghci&gt; :t 4 == 5<br>4 == 5 :: Bool<br></pre>
 <p>
 <img src="http://s3.amazonaws.com/lyah/bomb.png" alt="bomb"
- class="right" height="144" width="171">Here we see that doing <span
- class="fixed">:t</span> on an expression prints out the expression
-followed by <span class="fixed">::</span> and its type. <span
- class="fixed">::</span> is read as "has type of". Explicit types are
-always denoted with the first letter in capital case. <span
- class="fixed">'a'</span>, as it would seem, has a type of <span
- class="fixed">Char</span>. It's not hard to conclude that it stands
-for <i>character</i>. <span class="fixed">True</span> is of a <span
- class="fixed">Bool</span> type. That makes sense. But what's this?
-Examining the type of <span class="fixed">"HELLO!"</span> yields a <span
- class="fixed">[Char]</span>. The square brackets denote a list. So we
+ class="right" height="144" width="171">여기서 저희는 표현식에 대해 :t가 수행하는 일이, '표현
+식 <span class="fixed">::</span> 타입'을 출력하는 것이라는 것을 알 수 있습니다. <span
+ class="fixed">::</span>를 "타입을 지녔다"라고 읽습니다. 명시적 타입은 항상 첫번째 문자를 대문자로
+표시합니다. <span class="fixed">'a'</span>는 &nbsp;<span class="fixed">Char</span>타
+입을 지녔습니다. 이는 문자를 대표한다는 것을 판단하는 것은 어렵지 않습니다. <span class="fixed">True</span>는
+<span class="fixed">Bool</span>타입입니다. 그래야 맞습니다. 하지만 이건 무엇일까요? <span
+ class="fixed">"HELLO!"</span>의 타입이&nbsp;<span class="fixed">[Char]</span>라
+는 것을 살펴보시기 바랍니다. 사각 괄호는 리스트를 나타냅니다. So we
 read that as it being <i>a list of characters</i>. Unlike lists, each
 tuple length has its own type. So the expression of <span class="fixed">(True,
 'a')</span> has a type of <span class="fixed">(Bool, Char)</span>,
