--- a/types-and-typeclasses.html
+++ b/types-and-typeclasses.html
@@ -101,114 +101,91 @@ addThree x y z = x + y + z
             class="fixed">:t</span> 도 문제없이 동작합니다.</p>
         <p>여기 몇몇 common 타입의 개요가 있습니다.</p>
         <p> <span class="label type">Int</span>는 정수를 대변합니다. It's used
-          for whole numbers. <span class="fixed">7</span> can be an <span
-            class="fixed">Int</span> but <span class="fixed">7.2</span>
-          cannot. <span class="fixed">Int</span> is bounded, which
-          means that it has a minimum and a maximum value. Usually on
-          32-bit machines the maximum possible <span class="fixed">Int</span>
-          is 2147483647 and the minimum is -2147483648. </p>
-        <p><span class="label type">Integer</span> stands for, er … also
-          integer. The main difference is that it's not bounded so it
-          can be used to represent really really big numbers. I mean
-          like really big. <span class="fixed">Int</span>, however, is
-          more efficient. </p>
+          for whole numbers. <span class="fixed">7</span>은<span class="fixed">Int</span>가
+          될 수 있지만 <span class="fixed">7.2</span>은 되지 못합니다. <span class="fixed">Int</span>는
+          제한되었으며, 이는 최소값과 최대값을 지닌다는 것을 의미합니다. 보통 32비트 머신에서 가능한 <span class="fixed">Int</span>의
+          최대값은 2147483647이며 최소값은 -2147483648입니다. </p>
+        <p><span class="label type">Integer</span>는 음... 또 정수를 대변합니다. 주된
+          차이점은 제한되지 않아, 매우 매우 큰 숫자를 표현하는데 사용할 수 있습니다. 하지만 <span class="fixed">Int</span>가
+          더 효율적입니다. </p>
         <pre name="code" class="haskell: hs">factorial :: Integer -&gt; Integer
 factorial n = product [1..n]
 </pre>
         <pre name="code" class="haskell: ghci">ghci&gt; factorial 50
 30414093201713378043612608166064768844377641568960512000000000000
 </pre>
-        <p><span class="label type">Float</span> is a real floating
-          point with single precision.</p>
+        <p><span class="label type">Float</span>는 단일 정밀도를 지닌 부동 소숫점 실수
+          입니다.</p>
         <pre name="code" class="haskell: hs">circumference :: Float -&gt; Float
 circumference r = 2 * pi * r
 </pre>
         <pre name="code" class="haskell: ghci">ghci&gt; circumference 4.0
 25.132742
 </pre>
-        <p><span class="label type">Double</span> is a real floating
-          point with double the precision!</p>
+        <p><span class="label type">Double</span>는 2배 정밀도를 지닌 부동 소숫점 실수
+          입니다!</p>
         <pre name="code" class="haskell: hs">circumference' :: Double -&gt; Double
 circumference' r = 2 * pi * r
 </pre>
         <pre name="code" class="haskell: ghci">ghci&gt; circumference' 4.0
 25.132741228718345
 </pre>
-        <p> <span class="label type">Bool</span> is a boolean type. It
-          can have only two values: <span class="fixed">True</span> and
-          <span class="fixed">False</span>. </p>
-        <p> <span class="label type">Char</span> represents a
-          character. It's denoted by single quotes. A list of characters
-          is a string. </p>
-        <p>Tuples are types but they are dependent on their length as
-          well as the types of their components, so there is
-          theoretically an infinite number of tuple types, which is too
-          many to cover in this tutorial. Note that the empty tuple <span
-            class="label type">()</span> is also a type which can only
-          have a single value: <span class="fixed">()</span></p>
+        <p> <span class="label type">Bool</span>은 부울대수 타입입니다. 오직 2개의
+          값만을 가집니다: <span class="fixed">True</span>와 <span class="fixed">False</span>.
+        </p>
+        <p> <span class="label type">Char</span>는 문자를 나타냅니다. 이는 따옴표로
+          나타냅니다. 문자 리스트는 문자열입니다.</p>
+        <p>튜플은 타입이지만, 길이뿐만 아니라 구성물의 타입에도 영향을 받습니다. 따라서, 이론적으로 튜플의 타입은 이
+          튜토리얼에서 다루기엔 너무 많은 무수히 많은 갯수를 가집니다, 비어있는 튜플 <span class="label type">()</span>은
+          오직 하나 만을 값으로 갖는 타입입니다:&nbsp; <span class="fixed">()</span><span
+            class="fixed"></span></p>
         <a name="type-variables"></a>
-        <h2>Type variables</h2>
-        <p> What do you think is the type of the <span class="fixed">head</span>
-          function? Because <span class="fixed">head</span> takes a
-          list of any type and returns the first element, so what could
-          it be? Let's check! </p>
+        <h2>타입 변수<br>
+        </h2>
+        <p>&nbsp;<span class="fixed">head</span>함수의 타입은 무엇일까요? <span class="fixed">head</span>는
+          리스트를 취해 첫번째 원소를 반환하는데, 어떤 타입이 될까요? 확인해 봅시다! </p>
         <pre name="code" class="haskell: ghci">ghci&gt; :t head
 head :: [a] -&gt; a
 </pre>
         <p> <img src="http://s3.amazonaws.com/lyah/box.png" alt="box" class="left"
-            height="93" width="130"> Hmmm! What is this <span class="fixed">a</span>?
-          Is it a type? Remember that we previously stated that types
-          are written in capital case, so it can't exactly be a type.
-          Because it's not in capital case it's actually a <em>type
-            variable</em>. That means that <span class="fixed">a</span>
-          can be of any type. This is much like generics in other
-          languages, only in Haskell it's much more powerful because it
-          allows us to easily write very general functions if they don't
-          use any specific behavior of the types in them. Functions that
-          have type variables are called <em>polymorphic functions</em>.
-          The type declaration of <span class="fixed">head</span>
-          states that it takes a list of any type and returns one
-          element of that type. </p>
-        <p>Although type variables can have names longer than one
-          character, we usually give them names of a, b, c, d …</p>
-        <p>Remember <span class="fixed">fst</span>? It returns the
-          first component of a pair. Let's examine its type.</p>
+            height="93" width="130"> 흠! 이 <span class="fixed">a</span>가
+          뭘까요? 타입인가요? 이전에 타입이 대문자로 시작한다는 것을 기억한다면, 이것은 분명 타입이 아닙니다. 대문자로
+          시작하지 않기에 이것은 <em>타입 변수</em>입니다. 이는 <span class="fixed">a</span>가
+          어떠한 타입이라도 될 수 있다는 것을 의미합니다. 이는 다른 언어에서의 generic과 매우 유사하지만,
+          하스켈에선 타입의 행동을 명시하지 않더라도, 쉽게 general한 함수를 작성할 수 있기에 더욱 강력합니다.
+          타입 변수를 지닌 함수를 <em>ㄷ다형(polymorphic)함수</em>라 부릅니다. <span class="fixed">head</span>의
+          타입 선언은 어떤 타입의 리스트를 받아 그 타입의 원소 하나를 반환한다고 명시되었습니다. </p>
+        <p>타입 변수의 이름을 하나 이상의 문자로 구성할 수 있지만, 보통 a, b, c, d ...로 합니다.</p>
+        <p>pair에서 첫번째 항목을 반환하는 <span class="fixed">fst</span>를
+          기억하십니까?&nbsp; 이것의 타입을 알아 봅시다:</p>
         <pre name="code" class="haskell: ghci">ghci&gt; :t fst
 fst :: (a, b) -&gt; a
 </pre>
-        <p> We see that <span class="fixed">fst</span> takes a tuple
-          which contains two types and returns an element which is of
-          the same type as the pair's first component. That's why we can
-          use <span class="fixed">fst</span> on a pair that contains
-          any two types. Note that just because <span class="fixed">a</span>
-          and <span class="fixed">b</span> are different type
-          variables, they don't have to be different types. It just
-          states that the first component's type and the return value's
-          type are the same. </p>
+        <p>&nbsp; <span class="fixed">fst</span>가 2개의 타입을 지닌 튜플을 받아 첫번째
+          항목과 동일한 타입의 원소를 반환하는 것을 확인 할 수 있습니다. 이것이 2개의 타입을 지닌 쌍에 <span
+            class="fixed">fst</span>를 사용할 수 있는지에 대한 이유입니다.&nbsp; a와 b의
+          타입 변수가 다르기에, 타입이 뒤바뀌지 않는다는 것에 주목하시기 바랍니다. 이는 바로 첫번째 항목의 타입과
+          반환되 값의 타입이 동일할 것이라는 것을 의미합니다. </p>
         <a name="typeclasses-101"></a>
-        <h2>Typeclasses 101</h2>
+        <h2>타입클래스 101</h2>
         <img src="http://s3.amazonaws.com/lyah/classes.png" alt="class"
           class="right" height="158" width="210">
-        <p>A typeclass is a sort of interface that defines some
-          behavior. If a type is a part of a typeclass, that means that
-          it supports and implements the behavior the typeclass
-          describes. A lot of people coming from OOP get confused by
-          typeclasses because they think they are like classes in object
-          oriented languages. Well, they're not. You can think of them
-          kind of as Java interfaces, only better. </p>
-        <p>What's the type signature of the <span class="fixed">==</span>
-          function?</p>
+        <p>타입클래스는 몇몇 행동을 정의하는 인터페이스입니다. 타입이 타입 클래스의 인스턴스라는 것은, 타입은 그 타입
+          클래스가 기술하는 행동을 지원하며 구현한다는 것을 의미합니다. OOP에서 넘어온 많은 사람들이 객체 지향
+          언어에서의 클래스를 생각하기에 타입클래스를 혼란스러워 합니다. 저런, 그건 아닙니다. Java의 인터페이스라
+          생각하는게 낫을 것입니다. </p>
+        <p>&nbsp;<span class="fixed">==</span>함수의 타입서명은 무엇일까요?</p>
         <pre name="code" class="haskell: ghci">ghci&gt; :t (==)
 (==) :: (Eq a) =&gt; a -&gt; a -&gt; Bool
 </pre>
-        <div class="hintbox"><em>Note</em>: the equality operator, <span
-            class="fixed">==</span> is a function. So are <span class="fixed">+</span>,
-          <span class="fixed">*</span>, <span class="fixed">-</span>, <span
-            class="fixed">/</span> and pretty much all operators. If a
-          function is comprised only of special characters, it's
-          considered an infix function by default. If we want to examine
-          its type, pass it to another function or call it as a prefix
-          function, we have to surround it in parentheses.</div>
+        <div class="hintbox"><em>Note</em>: 등위 연산자 <span class="fixed">==</span>
+          은 함수입니다.&nbsp; <span class="fixed">+</span>, <span class="fixed">*</span>,
+          <span class="fixed">-</span>, <span class="fixed">/</span>와 수
+          많은 연산자들도 그러합니다. If a function is comprised only of special
+          characters, it's considered an infix function by default. If
+          we want to examine its type, pass it to another function or
+          call it as a prefix function, we have to surround it in
+          parentheses.</div>
         <p>Interesting. We see a new thing here, the <span class="fixed">=&gt;</span>
           symbol. Everything before the <span class="fixed">=&gt;</span>
           symbol is called a <em>class constraint</em>. We can read the
