--- a/types-and-typeclasses.html
+++ b/types-and-typeclasses.html
@@ -34,7 +34,7 @@
           되지 않을 것입니다. 이게 좋은게, 나중에 프로그램이 멈추어 버리는 것보다 컴파일 타임에 이러한 종류의 에러를
           잡는 것이 낫기 때문입니다. 하스켈에서 모든것은 타입을 지니므로, 컴파일 하기전 컴파일러는 프로그램에 대해
           상당수를 판별할 수 있습니다.</p>
-        <p>Java및 Pascal과는 달리, 하스켈은 <strong>타입추론(type inference)</strong>을
+        <p>자바 및 파스칼과는 달리, 하스켈은 <strong>타입추론(type inference)</strong>을
           지녔습니다. 예를들어, 숫자를 썼다면 하스켈에게 숫자라고 알려줄 필요가 없습니다. 스스로 추론할 수 있어,
           명시적으로 함수와 표현식의 타입을 작성할 필요는 없습니다. 저희는 지금까지 하스켈의 타입에 관해 몇몇 기본적이며
           매우 피상적인것을 다루었습니다.&nbsp; 하지만, 타입 시스템의 이해는 하스켈을 배우는 단계에서 가장
@@ -62,11 +62,11 @@ ghci&gt; :t 4 == 5
           타입은 항상 첫번째 문자를 대문자로 표시합니다. <span class="fixed">'a'</span>는
           &nbsp;<span class="fixed">Char</span>타입을 지녔습니다. 문자를 대표한다는 것을
           쉽게 알 수 있습니다. <span class="fixed">True</span>는 <span class="fixed">Bool</span>타
-          입 입니다. 뭐 맞는 말입니다. 하지만 이건 무엇일까요? <span class="fixed">"HELLO!"</span>의
+          입입니다. 뭐 맞는 말입니다. 하지만 이건 무엇일까요? <span class="fixed">"HELLO!"</span>의
           타입이&nbsp;<span class="fixed">[Char]</span>라 는 것을 살펴보시기 바랍니다.
           사각 괄호는 리스트를 나타냅니다. 따라서 저희는 이것을 문자 리스트라 읽을 수 있습니다. 리스트와 달리, 튜플의
           길이 각각은 자신만의 고유한 타입을 지닙니다. 따라서 표현식<span class="fixed">(True,
-            'a')</span> 는 타입 <span class="fixed">(Bool, Char)</span> 을
+            'a')</span>은 타입 <span class="fixed">(Bool, Char)</span>을
           지니며, 표현식 <span class="fixed">('a','b','c')</span>은 타입<span class="fixed">(Char,
 
 
@@ -74,9 +74,9 @@ ghci&gt; :t 4 == 5
           항상 <span class="fixed">False</span>를 반환하기에, 이것의 타입은 <span class="fixed">Bool</span>입
           니다. </p>
         <p>함수 또한 타입을 갖습니다. 함수를 작성할 때, 명시적 타입 선언을 할 수 있습니다. 매우 짧은 함수를 작성할
-          때를 제외하면 이는 보통 괜찮은 행동입니다. 여기선, 저희는 모든 함수에 타입 선언을 할것입니다. 1장에서
-          작성한 문자열에서 소문자로된 것을 걸러내는 list comprehension가 기억나십니까? 여기 타입 선언
-          하는 법이 나와있습니다: </p>
+          때를 제외하면 이는 보통 바람직한 행동입니다. 여기선, 저희는 모든 함수에 타입 선언을 할것입니다. 1장에서
+          작성한 문자열에서 소문자를 걸러내는 리스트 해석(list comprehension)이 기억나십니까? 여기
+          타입선언을 하는 법이 나와있습니다: </p>
         <pre name="code" class="haskell: hs">removeNonUppercase :: [Char] -&gt; [Char]
 removeNonUppercase st = [ c | c &lt;- st, c `elem` ['A'..'Z']] 
 </pre>
@@ -154,10 +154,11 @@ head :: [a] -&gt; a
             height="93" width="130"> 흠! 이 <span class="fixed">a</span>가
           뭘까요? 타입인가요? 이전에 타입이 대문자로 시작한다는 것을 기억한다면, 이것은 분명 타입이 아닙니다. 대문자로
           시작하지 않기에 이것은 <em>타입 변수(Type Variables)</em>입니다. 이는 <span class="fixed">a</span>가
-          어떠한 타입이라도 될 수 있다는 것을 의미합니다. 이는 다른 언어에서의 generic과 매우 유사하지만,
-          하스켈에선 타입의 행동을 명시하지 않더라도, 쉽게 general한 함수를 작성할 수 있기에 더욱 강력합니다.
-          타입 변수를 지닌 함수를 <em>다형(polymorphic)함수</em>라 부릅니다. <span class="fixed">head</span>의
-          타입 선언은 어떤 타입의 리스트를 받아 그 타입의 원소 하나를 반환한다고 명시되었습니다. </p>
+          어떠한 타입이라도 될 수 있다는 것을 의미합니다. 이는 다른 언어에서의 제네릭(generic)과 매우
+          유사하지만, 하스켈에선 타입의 행동을 명시하지 않더라도, 쉽게 일반화된(general) 함수를 작성할 수 있기에
+          더욱 강력합니다. 타입 변수를 지닌 함수를 <em>다형(polymorphic)함수</em>라 부릅니다. <span
+            class="fixed">head</span>의 타입 선언은 어떤 타입의 리스트를 받아 그 타입의 원소
+          하나를 반환한다고 명시되었습니다. </p>
         <p>타입 변수의 이름을 하나 이상의 문자로 구성할 수 있지만, 보통 a, b, c, d ...로 합니다.</p>
         <p>pair에서 첫번째 항목을 반환하는 <span class="fixed">fst</span>를
           기억하십니까?&nbsp; 이것의 타입을 알아 봅시다:</p>
@@ -175,7 +176,7 @@ fst :: (a, b) -&gt; a
           class="right" height="158" width="210">
         <p>타입클래스는 몇몇 행동을 정의하는 인터페이스입니다. 타입이 타입 클래스의 인스턴스라는 것은, 타입은 그 타입
           클래스가 기술하는 행동을 지원하며 구현한다는 것을 의미합니다. OOP에서 넘어온 많은 사람들이 객체 지향
-          언어에서의 클래스를 생각하기에 타입클래스를 혼란스러워 합니다. 저런, 그건 아닙니다. Java의 인터페이스라
+          언어에서의 클래스를 생각하기에 타입클래스를 혼란스러워합니다. 저런, 그건 아닙니다. Java의 인터페이스라
           생각하는게 낫을 것입니다. </p>
         <p>&nbsp;<span class="fixed">==</span>함수의 타입서명은 무엇일까요?</p>
         <pre name="code" class="haskell: ghci">ghci&gt; :t (==)
@@ -185,7 +186,7 @@ fst :: (a, b) -&gt; a
           은 함수입니다.&nbsp; <span class="fixed">+</span>, <span class="fixed">*</span>,
           <span class="fixed">-</span>, <span class="fixed">/</span>와
           다른 수 많은 연산자들도 그러합니다. 함수가 특별한 문자로만 구성되어 있으면, 기본적으로 중위함수라 여겨집니다.
-          타입이 먼지 확인하려면, 다른 함수에 넣어 보거나, 괄호로 둘러싸 전위함수로 호출 해야 합니다.</div>
+          타입이 뭔지 확인하려면, 다른 함수에 넣어 보거나, 괄호로 둘러싸 전위함수로 호출 해야 합니다.</div>
         <p>흥미롭군요. 저희는 여기서 새로운&nbsp;<span class="fixed">=&gt;</span>심볼을
           발견하였습니다. <span class="fixed">=&gt;</span> 심볼 이전의 것을 <em>클래스
             제약(class constraint)</em>이라 합니다. 타입 선언을 다음과 같이 읽을 수 있습니다:
@@ -199,7 +200,7 @@ fst :: (a, b) -&gt; a
             class="fixed">==</span> 를 이용하므로 <span class="fixed">(Eq a)
             =&gt; a -&gt; [a] -&gt; Bool</span> 타입을 지닙니다.</p>
         <p>몇몇 기본 타입클래스들:</p>
-        <p><span class="label class">Eq</span>는 동등성을 검사를 지원하는 타입에 이용됩니다.
+        <p><span class="label class">Eq</span>는 동등성 검사를 지원하는 타입에 이용됩니다.
           이의 맴버 구현 함수는 <span class="fixed">==</span>와 <span class="fixed">/=</span>입
           니다. 함수에 타입 변수에 대한 <span class="fixed">Eq</span> 클래스 제약이
           있다면,&nbsp; 이 내부 정의 어딘가에는 <span class="fixed">==</span>나 <span
@@ -225,7 +226,7 @@ True
           부분입니다. <span class="fixed">Ord</span>는 <span class="fixed">&gt;</span>,
           <span class="fixed">&lt;</span>, <span class="fixed">&gt;=</span>,
           <span class="fixed">&lt;=</span>와 같은 표준 비교 함수들을 모두 다룹니다. <span
-            class="fixed">compare</span> 함수는 동일한 타입의 두 <span class="fixed">Ord</span>멤
+            class="fixed">compare</span>함수는 동일한 타입의 두 <span class="fixed">Ord</span>멤
           버를 받아 순서(ordering)를 반환합니다. <span class="label type">Ordering</span>은
           각각 보다 큰(greater than), 보다 작은(lesser than), 같음(equal)을 나타내는 <span
             class="fixed">GT</span>, <span class="fixed">LT</span>, <span
@@ -243,9 +244,9 @@ GT
 </pre>
         <p>&nbsp;<span class="label class">Show</span>의 맴버는 문자열로 나타낼 수
           있습니다. 함수를 제외한, 지금까지 다룬 모든 타입들은 <span class="fixed">Show</span>의
-          한 부분입니다. The most used function that deals with the <span class="fixed">Show</span>타
-          입클래스를 다루는데 가장 많이 사용하는 함수는 <span class="fixed">show</span>입니다.
-          이는 <span class="fixed">Show</span>타입의 맴버인 값을 취해 문자열로 표시합니다.</p>
+          한 부분입니다. <span class="fixed">Show</span>타입클래스를 다루는 함수중 가장 많이
+          사용되는 것은 <span class="fixed">show</span>입니다. 이는 <span class="fixed">Show</span>타
+          입의 맴버인 값을 취해 문자열로 표시합니다.</p>
         <pre name="code" class="haskell: ghci">ghci&gt; show 3
 "3"
 ghci&gt; show 5.334
@@ -385,14 +386,14 @@ ghci&gt; 20 :: Double
           타입을 동시에 만족하는 작업을 수행할때 매우 유용합니다. 예를들어, <span class="fixed">length</span>함
           수는 더욱 일반적인 타입 <span class="fixed">(Num b) =&gt; length :: [a]
             -&gt; b</span>을 갖는 대신,&nbsp; <span class="fixed">length ::
-            [a] -&gt; Int</span>라는 타입 선언을 지녔습니다. 여기에는 역사적인 이유나 먼가가 있겠지만,
+            [a] -&gt; Int</span>라는 타입 선언을 지녔습니다. 여기에는 역사적인 이유나 뭔가가 있겠지만,
           제 생각엔 이건 매우 어리석게 보입니다. 어찌됬든Anyway, 리스트의 길이를 얻어 그것에 <span class="fixed">3.2</span>를
           더하려 한다면, <span class="fixed">Int</span>와 부동소숫점 숫자를 더하려 했기에
           에러를 얻게 될 것입니다. 따라서 이걸 피하려면, <span class="fixed">fromIntegral
-            (length [1,2,3,4]) + 3.2</span>라고 해야 제대로 동작 할 것입니다.</p>
+            (length [1,2,3,4]) + 3.2</span>라고해야 제대로 동작 할 것입니다.</p>
         <p>&nbsp;<span class="fixed">fromIntegral</span>은 이의 타입선언에 여러개의
-          클래스 제약을 지니고 있다는 것을 주목하시기 바랍니다. 여러분이 보시는 것처럼, 이는 여전히 유효하며, 다수의
-          클래스 제약들은 괄호 안에서 쉼표로 분리됩니다.</p>
+          클래스 제약을 지니고 있다는 것을 주목하시기 바랍니다. 여러분이 보시는 것처럼, 이는 여전히 유효하며, 괄호
+          안의 다수의 클래스 제약들은 쉼표로 분리합니다.</p>
         <div class="footdiv">
           <ul>
             <li style="text-align:left"> <a href="starting-out" class="prevlink">시
