--- a/types-and-typeclasses.html
+++ b/types-and-typeclasses.html
@@ -13,12 +13,13 @@
   <body class="introcontent">
     <div class="bgwrapper">
       <div id="content">
-        <div class="footdiv" style="margin-bottom:25px;">
+        <div class="footdiv" style="margin-bottom: 25px;">
           <ul>
-            <li style="text-align:left"> <a href="starting-out" class="prevlink">시
+            <li style="text-align: left;"> <a href="starting-out" class="prevlink">시
                 작</a> </li>
-            <li style="text-align:center"> <a href="chapters">목차</a> </li>
-            <li style="text-align:right"> <a href="syntax-in-functions"
+            <li style="text-align: center;"> <a href="chapters">목차</a>
+            </li>
+            <li style="text-align: right;"> <a href="syntax-in-functions"
                 class="nxtlink">Syntax in Functions</a> </li>
           </ul>
         </div>
@@ -36,11 +37,11 @@
           상당수를 판별할 수 있습니다.</p>
         <p>자바 및 파스칼과는 달리, 하스켈은 <strong>타입추론(type inference)</strong>을
           지녔습니다. 예를들어, 숫자를 썼다면 하스켈에게 숫자라고 알려줄 필요가 없습니다. 스스로 추론할 수 있어,
-          명시적으로 함수와 표현식의 타입을 작성할 필요는 없습니다. 저희는 지금까지 하스켈의 타입에 관해 몇몇 기본적이며
+          명시적으로 함수와 표현식의 타입을 작성할 필요는 없습니다. 지금까지 저희는 하스켈의 타입에 관해 몇몇 기본적이며
           매우 피상적인것을 다루었습니다.&nbsp; 하지만, 타입 시스템의 이해는 하스켈을 배우는 단계에서 가장
           중요합니다.</p>
         <p>타입은 모든 표현식이 갖고있는 이름표입니다. 이는 표현식에 맞는 범주가 어느것인지 알려줍니다. 표현식 <span
-            class="fixed">True</span> 는 부울대수이며, <span class="fixed">"hello"</span>는
+            class="fixed">True</span>는 부울대수이며, <span class="fixed">"hello"</span>는
           문자열, 등등이 있습니다.</p>
         <p>이제 저희는 GHCI를 이용하여 표현식의 타입을 밝혀낼 것입니다. 이를 :t 명령어와 타입을 알려주는 유효한
           표현식을 이용하여 할 수 있습니다. 한번 돌려 봅시다.</p>
@@ -56,27 +57,24 @@ ghci&gt; :t 4 == 5
 4 == 5 :: Bool
 </pre>
         <p> <img src="http://s3.amazonaws.com/lyah/bomb.png" alt="bomb"
-            class="right" height="144" width="171"> 여기서 저희는 표현식에 대해
-          :t가&nbsp; '표현 식 <span class="fixed">::</span> 타입'을 출력한다는 것을 알
-          수 있습니다. <span class="fixed">::</span>를 "타입을 지녔다"라고 읽습니다. 명시적
-          타입은 항상 첫번째 문자를 대문자로 표시합니다. <span class="fixed">'a'</span>는
+            class="right" height="144" width="171"> 여기서 저희는 ':t
+          표현식'이&nbsp; '표현식 <span class="fixed">::</span> 타입'을 출력한다는 것을
+          알 수 있습니다. <span class="fixed">::</span>를 "타입을 지녔다"라고 읽습니다.
+          명시적 타입은 항상 첫번째 문자를 대문자로 표시합니다. <span class="fixed">'a'</span>는
           &nbsp;<span class="fixed">Char</span>타입을 지녔습니다. 문자를 대표한다는 것을
           쉽게 알 수 있습니다. <span class="fixed">True</span>는 <span class="fixed">Bool</span>타
           입입니다. 뭐 맞는 말입니다. 하지만 이건 무엇일까요? <span class="fixed">"HELLO!"</span>의
-          타입이&nbsp;<span class="fixed">[Char]</span>라 는 것을 살펴보시기 바랍니다.
-          사각 괄호는 리스트를 나타냅니다. 따라서 저희는 이것을 문자 리스트라 읽을 수 있습니다. 리스트와 달리, 튜플의
-          길이 각각은 자신만의 고유한 타입을 지닙니다. 따라서 표현식<span class="fixed">(True,
-            'a')</span>은 타입 <span class="fixed">(Bool, Char)</span>을
-          지니며, 표현식 <span class="fixed">('a','b','c')</span>은 타입<span class="fixed">(Char,
-
-
-            Char, Char)</span>을 지닐 것입니다. <span class="fixed">4 == 5</span>는
-          항상 <span class="fixed">False</span>를 반환하기에, 이것의 타입은 <span class="fixed">Bool</span>입
-          니다. </p>
+          타입이&nbsp;<span class="fixed">[Char]</span>라는 것을 살펴보시기 바랍니다. 사각
+          괄호는 리스트를 나타냅니다. 따라서 저희는 이것을 문자 리스트라 읽을 수 있습니다. 리스트와 달리, 튜플의 길이
+          각각은 자신만의 고유한 타입을 지닙니다. 따라서 표현식<span class="fixed">(True, 'a')</span>은
+          타입 <span class="fixed">(Bool, Char)</span>을 지니며, 표현식 <span class="fixed">('a','b','c')</span>은
+          타입<span class="fixed">(Char, Char, Char)</span>을 지닐 것입니다. <span
+            class="fixed">4 == 5</span>는 항상 <span class="fixed">False</span>를
+          반환하기에, 이것의 타입은 <span class="fixed">Bool</span>입 니다. </p>
         <p>함수 또한 타입을 갖습니다. 함수를 작성할 때, 명시적 타입 선언을 할 수 있습니다. 매우 짧은 함수를 작성할
           때를 제외하면 이는 보통 바람직한 행동입니다. 여기선, 저희는 모든 함수에 타입 선언을 할것입니다. 1장에서
-          작성한 문자열에서 소문자를 걸러내는 리스트 해석(list comprehension)이 기억나십니까? 여기
-          타입선언을 하는 법이 나와있습니다: </p>
+          작성한 문자열에서 소문자를 걸러내는 리스트 해석(list comprehension)이 기억나십니까? 여기 어떻게
+          타입을 선언해야 하는지가 나와있습니다: </p>
         <pre name="code" class="haskell: hs">removeNonUppercase :: [Char] -&gt; [Char]
 removeNonUppercase st = [ c | c &lt;- st, c `elem` ['A'..'Z']] 
 </pre>
@@ -87,14 +85,24 @@ removeNonUppercase st = [ c | c &lt;- st, c `elem` ['A'..'Z']]
 
 
 
+
+
+
+
+
+
+
+
+
+
             :: String -&gt; String</span>라 작성해도 됩니다. 저희가 타입 선언하든 않하든,
-          컴파일러 스스로 이 함수가 문자열에서 문자열로 가는걸 알기에, 딱히 타입 선언을 할 필요는 없습니다. 하지만
+          컴파일러 스스로 함수가 문자열이 문자열이 된다는 것을 알기에, 딱히 타입 선언을 할 필요는 없습니다. 하지만
           여러 인자를 취하는 함수의 타입을 작성하려면 어떻게 해야할까요? 여기 3개의 정수를 받아 더하는, 간단한 함수가
           있습니다: </p>
         <pre name="code" class="haskell: hs">addThree :: Int -&gt; Int -&gt; Int -&gt; Int
 addThree x y z = x + y + z
 </pre>
-        <p>인자는&nbsp; <span class="fixed">-&gt;</span>로 구분되었으며, 인자와 반환
+        <p>인자는&nbsp; <span class="fixed">-&gt;</span>로 구분되어 있으며, 반환
           타입간에 딱히 다른 점은 없습니다. 반환 타입은 선언의 마지막 항목이며, 인자는 처음 3개의 항목입니다. 후에
           <span class="fixed">Int, Int, Int -&gt; Int</span> 처럼 명확하게
           구분하는 대신, 왜 모두 <span class="fixed">-&gt;</span>로 분리해 놨는지를 살펴볼
@@ -117,16 +125,16 @@ factorial n = product [1..n]
         <pre name="code" class="haskell: ghci">ghci&gt; factorial 50
 30414093201713378043612608166064768844377641568960512000000000000
 </pre>
-        <p><span class="label type">Float</span>는 단일 정밀도를 지닌 부동 소숫점 실수
-          입니다.</p>
+        <p><span class="label type">Float</span>는 단일 정밀도를 지닌 부동 소숫점
+          실수입니다.</p>
         <pre name="code" class="haskell: hs">circumference :: Float -&gt; Float
 circumference r = 2 * pi * r
 </pre>
         <pre name="code" class="haskell: ghci">ghci&gt; circumference 4.0
 25.132742
 </pre>
-        <p><span class="label type">Double</span>는 2배 정밀도를 지닌 부동 소숫점 실수
-          입니다!</p>
+        <p><span class="label type">Double</span>는 2배 정밀도를 지닌 부동 소숫점
+          실수입니다!</p>
         <pre name="code" class="haskell: hs">circumference' :: Double -&gt; Double
 circumference' r = 2 * pi * r
 </pre>
@@ -166,10 +174,9 @@ head :: [a] -&gt; a
 fst :: (a, b) -&gt; a
 </pre>
         <p>&nbsp; <span class="fixed">fst</span>가 2개의 타입을 지닌 튜플을 받아 첫번째
-          항목과 동일한 타입의 원소를 반환하는 것을 확인 할 수 있습니다. 이것이 2개의 타입을 지닌 쌍에 <span
-            class="fixed">fst</span>를 사용할 수 있는지에 대한 이유입니다.&nbsp; a와 b의
-          타입 변수가 다르기에, 타입이 뒤바뀌지 않는다는 것에 주목하시기 바랍니다. 이는 바로 첫번째 항목의 타입과
-          반환되 값의 타입이 동일할 것이라는 것을 의미합니다. </p>
+          항목과 동일한 타입의 원소를 반환하는 것을 확인할 수 있습니다. 이것이 2개의 타입을 지닌 쌍에 <span class="fixed">fst</span>를
+          사용할 수 있는지에 대한 이유입니다.&nbsp; a와 b의 타입 변수가 다르기에, 타입이 뒤바뀌지 않는다는 것에
+          주목하시기 바랍니다. 이는 바로 첫번째 항목의 타입과 반환되 값의 타입이 동일할 것이라는 것을 의미합니다. </p>
         <a name="typeclasses-101"></a>
         <h2>타입클래스 101</h2>
         <img src="http://s3.amazonaws.com/lyah/classes.png" alt="class"
@@ -186,23 +193,23 @@ fst :: (a, b) -&gt; a
           은 함수입니다.&nbsp; <span class="fixed">+</span>, <span class="fixed">*</span>,
           <span class="fixed">-</span>, <span class="fixed">/</span>와
           다른 수 많은 연산자들도 그러합니다. 함수가 특별한 문자로만 구성되어 있으면, 기본적으로 중위함수라 여겨집니다.
-          타입이 뭔지 확인하려면, 다른 함수에 넣어 보거나, 괄호로 둘러싸 전위함수로 호출 해야 합니다.</div>
+          타입이 뭔지 확인하려면, 다른 함수에 넣어 보거나, 괄호로 둘러싸 전위함수로 호출해야 합니다.</div>
         <p>흥미롭군요. 저희는 여기서 새로운&nbsp;<span class="fixed">=&gt;</span>심볼을
-          발견하였습니다. <span class="fixed">=&gt;</span> 심볼 이전의 것을 <em>클래스
+          발견하였습니다. <span class="fixed">=&gt;</span>심볼 이전의 것을 <em>클래스
             제약(class constraint)</em>이라 합니다. 타입 선언을 다음과 같이 읽을 수 있습니다:
           "등위함수는 동일한 타입의 두 값을 취해 <span class="fixed">Bool</span>을 반환한다.
           그 타입은 클래스 제약에 의해 <span class="fixed">Eq</span>클래스의 멤버여야 한다".</p>
-        <p><span class="fixed">Eq</span> 타입클래스는 동일성을 판별하기 위한 인터페이스를
-          제공합니다.&nbsp; 특정 타입에 두 항목의 같음을 비교할 수 있으면, 그 타입은 <span class="fixed">Eq</span>
-          클래스의 멤버가 될 수 있습니다. 입력과 출력을 담당하는 타입을 제외하면, 표준 하스켈의 모든 타입들은 <span
-            class="fixed">Eq</span> 타입클래스의 한 부분입니다.</p>
-        <p><span class="fixed">elem</span> 함수는 리스트 내부에 있는 값을 찾기위해 <span
-            class="fixed">==</span> 를 이용하므로 <span class="fixed">(Eq a)
-            =&gt; a -&gt; [a] -&gt; Bool</span> 타입을 지닙니다.</p>
+        <p><span class="fixed">Eq</span>타입클래스는 동일성을 판별하기 위한 인터페이스를
+          제공합니다.&nbsp; 특정 타입에 두 항목의 같음을 비교할 수 있으면, 그 타입은 <span class="fixed">Eq</span>클
+          래스의 멤버가 될 수 있습니다. 입력과 출력을 담당하는 타입을 제외하면, 표준 하스켈의 모든 타입들은 <span
+            class="fixed">Eq</span>타입클래스의 한 부분입니다.</p>
+        <p><span class="fixed">elem</span>함수는 리스트 내부에 있는 값을 찾기위해 <span
+            class="fixed">==</span>를 이용하므로 <span class="fixed">(Eq a)
+            =&gt; a -&gt; [a] -&gt; Bool</span>타입을 지닙니다.</p>
         <p>몇몇 기본 타입클래스들:</p>
         <p><span class="label class">Eq</span>는 동등성 검사를 지원하는 타입에 이용됩니다.
           이의 맴버 구현 함수는 <span class="fixed">==</span>와 <span class="fixed">/=</span>입
-          니다. 함수에 타입 변수에 대한 <span class="fixed">Eq</span> 클래스 제약이
+          니다. 함수에 타입 변수에 대한 <span class="fixed">Eq</span>클래스 제약이
           있다면,&nbsp; 이 내부 정의 어딘가에는 <span class="fixed">==</span>나 <span
             class="fixed">/=</span>을 사용할 것입니다. 함수를 제외한 이전에 저희가 언급한 모든
           타입들은 <span class="fixed">Eq</span>의 한 부분이므로, 이것들로부터 동등성을 검사할
@@ -254,8 +261,8 @@ ghci&gt; show 5.334
 ghci&gt; show True
 "True"
 </pre>
-        <p><span class="label class">Read</span>는 <span class="fixed">Show</span>타
-          입클래스와는 반대입니다. <span class="fixed">read</span>함수는 문자열을 취해 <span
+        <p><span class="label class">Read</span>는 <span class="fixed">Show</span>
+          타입클래스와는 반대입니다. <span class="fixed">read</span>함수는 문자열을 취해 <span
             class="fixed">Read</span>맴버인 타입을 반환합니다.</p>
         <pre name="code" class="haskell: ghci">ghci&gt; read "True" || False
 True
@@ -283,8 +290,8 @@ ghci&gt; read "[1,2,3,4]" ++ [3]
         <pre name="code" class="haskell: ghci">ghci&gt; :t read
 read :: (Read a) =&gt; String -&gt; a
 </pre>
-        <p> 보이십니까? <span class="fixed">Read</span> 타입을 반환하였지만, 만약 저희가
-          다른 방법을 이용한다면, 어떤 타입인지 알 수 없을 것입니다. 이것이 바로 <em>타입 어노테이션(type
+        <p> 보이십니까? <span class="fixed">Read</span>타입을 반환하였지만, 만약 저희가 다른
+          방법을 이용한다면, 어떤 타입인지 알 수 없을 것입니다. 이것이 바로 <em>타입 어노테이션(type
             annotations)</em>을 사용해야 하는 이유입니다. 타입 어노테이션은 표현식의 타입이 무엇인지
           명시적으로 알려주는 하나의 방법입니다. 표현식 끝에&nbsp; <span class="fixed">::</span>을
           추가하고 타입을 명시함으로써 이를 행할 수 있습니다. 살펴봅시다: </p>
@@ -299,13 +306,13 @@ ghci&gt; read "[1,2,3,4]" :: [Int]
 ghci&gt; read "(3, 'a')" :: (Int, Char)
 (3, 'a')
 </pre>
-        <p>이와 같이 컴파일러는 표현식의 타입 대부분을 스스로 추론할 수 있습니다. . 그러나, 때때로 컴파일러는 <span
+        <p>이와 같이 컴파일러는 표현식의 타입 대부분을 스스로 추론할 수 있습니다. 그러나, 때때로 컴파일러는 <span
             class="fixed">read "5"</span>와 같은 표현식의 반환값의 타입이 <span class="fixed">Int</span>인
           지 <span class="fixed">Float</span>인지를 알지 못합니다. 타입이 무엇인지 확인하기
           위해선, 하스켈은 실제로 <span class="fixed">read "5"</span>를 평가해야만 합니다.
           그러나 하스켈은 정적 타입 언어이기에, 코드가 컴파일 되기 전에 (혹은 GHCi인 경우, 평가하여)모든 타입을
           알아야만 합니다. 따라서 저희는 "이 표현식은 이러한 타입을 갖는다고!"라고 하스켈에게 알려줘야 합니다.</p>
-        <p><span class="label class">Enum</span> 맴버는 연속적인 순서를 지닌 타입입니다 —
+        <p><span class="label class">Enum</span>맴버는 연속적인 순서를 지닌 타입입니다 —
           열거할 수 있습니다.&nbsp; <span class="fixed">Enum</span> 타입 클래스의 주요한
           이점은 리스트 범위에 이 값들을 사용할 수 있다는 것입니다. 또한 이는 <span class="fixed">succ</span>와
           <span class="fixed">pred</span>함수로 얻을 수 있는 계승자(successor)와
@@ -342,7 +349,7 @@ False
         <pre name="code" class="haskell: ghci">ghci&gt; maxBound :: (Bool, Int, Char)
 (True,2147483647,'\1114111')
 </pre>
-        <p><span class="label class">Num</span>은 숫자형 타입클래스입니다. 이것의 맴버는
+        <p><span class="label class">Num</span>은 숫자형 타입클래스입니다. 이의 맴버는
           숫자처럼 행동 할 수 있는 속성을 갖습니다. 숫자형 타입을 실험해 봅시다.</p>
         <pre name="code" class="haskell: ghci">ghci&gt; :t 20
 20 :: (Num t) =&gt; t
@@ -365,6 +372,16 @@ ghci&gt; 20 :: Double
 (*) :: (Num a) =&gt; a -&gt; a -&gt; a
 </pre>
         <p> 이는 동일한 타입의 두 숫자를 받아 그 타입의 숫자를 반환합니다.&nbsp;<span class="fixed">(5
+
+
+
+
+
+
+
+
+
+
             :: Int) * (6 :: Integer)</span>는 타입 에러를 내는 반면,&nbsp; <span
             class="fixed">5 * (6 :: Integer)</span>는 제대로 동작하여&nbsp; <span
             class="fixed">Integer</span>를 생성하는건,&nbsp; <span class="fixed">5</span>가
@@ -396,10 +413,11 @@ ghci&gt; 20 :: Double
           안의 다수의 클래스 제약들은 쉼표로 분리합니다.</p>
         <div class="footdiv">
           <ul>
-            <li style="text-align:left"> <a href="starting-out" class="prevlink">시
+            <li style="text-align: left;"> <a href="starting-out" class="prevlink">시
                 작</a> </li>
-            <li style="text-align:center"> <a href="chapters">목차</a> </li>
-            <li style="text-align:right"> <a href="syntax-in-functions"
+            <li style="text-align: center;"> <a href="chapters">목차</a>
+            </li>
+            <li style="text-align: right;"> <a href="syntax-in-functions"
                 class="nxtlink">Syntax in Functions</a> </li>
           </ul>
         </div>
