--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<a href="./types-and-typeclasses.html">Believe the type</a>
+<html>
+  <head>
+    <meta http-equiv="REFRESH" content=0; URL="./chapters.html">
+  </head>
+  <body>
+  </body>
+</html>
