--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <meta http-equiv="REFRESH" content=0; URL="./chapters.html">
+    <meta http-equiv="REFRESH" content=""0; URL=./chapters.html">
   </head>
   <body>
   </body>
