update  types-and-typeclasses.html

--- a/types-and-typeclasses.html
+++ b/types-and-typeclasses.html
@@ -15,12 +15,12 @@
       <div id="content">
         <div class="footdiv" style="margin-bottom: 25px;">
           <ul>
-            <li style="text-align: left;"> <a href="starting-out" class="prevlink">시
+            <li style="text-align: left;"> <a href="http://ensky0.egloos.com/5518698" class="prevlink">시
                 작</a> </li>
             <li style="text-align: center;"> <a href="chapters">목 차</a>
             </li>
-            <li style="text-align: right;"> <a href="syntax-in-functions"
-                class="nxtlink">Syntax in Functions</a> </li>
+            <li style="text-align: right;"> <a href="http://ensky0.egloos.com/5599806"
+                class="nxtlink">함수에 관한 문법</a> </li>
           </ul>
         </div>
         <h1>타입과 타입클래스</h1>
