--- a/recursion.html
+++ b/recursion.html
@@ -3,7 +3,7 @@
   <head>
     <title>Learn You a Haskell for Great Good! - Recursion</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <base href="http://learnyouahaskell.com/"> <style type="text/css">
+    <base href="http://netpyoung.github.com/learn_you_a_haskell_for_great_good/"> <style type="text/css">
 	@import url('reset.css');
 	@import url('style.css');
 </style><link rel="shortcut icon" href="favicon.png" type="image/png">
@@ -15,8 +15,8 @@
       <div id="content">
         <div class="footdiv" style="margin-bottom: 25px;">
           <ul>
-            <li style="text-align: left;"> <a href="syntax-in-functions"
-                class="prevlink">Syntax in Functions</a> </li>
+            <li style="text-align: left;"> <a href="http://ensky0.egloos.com/5599806"
+                class="prevlink">함수에 관한 문법</a> </li>
             <li style="text-align: center;"> <a href="chapters">목 차</a>
             </li>
             <li style="text-align: right;"> <a href="higher-order-functions"
