--- a/types-and-typeclasses.html
+++ b/types-and-typeclasses.html
@@ -3,7 +3,7 @@
   <head>
     <title>Learn You a Haskell for Great Good! - Types and Typeclasses</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <base href="http://learnyouahaskell.com/"> <style type="text/css">
+    <base href="http://netpyoung.github.com/learn_you_a_haskell_for_great_good/"> <style type="text/css">
 	@import url('reset.css');
 	@import url('style.css');
 </style><link rel="shortcut icon" href="favicon.png" type="image/png">
